--- a/calendar.html
+++ b/calendar.html
@@ -95,11 +95,11 @@ td:nth-child(even)>span {
 }
 td:last-child>span,
 td:nth-child(6)>span {
-    color: #9b59b6;
+    color: #8fa580;
 }
 td.avui>span {
     font-weight: bold;
-    background-color: #9b59b6;
+    background-color: 8fa580;
     color: #fff;
     border: 2px solid rgba(0,0,0,0.1);
 }
@@ -107,7 +107,7 @@ td.fora > span {
     opacity: 0.2;
 }
 td > span:hover {
-    background: #a57cb6;
+    background: #e0ebe4;
     color: #fff;
 }
 .boto-next, .boto-prev {
